internal/lustre/parser/lustre_parser.go
// Code generated from /Users/wei/GoProjects/go-zero-check/internal/lustre/Lustre.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // Lustre
import (
	"fmt"
	"strconv"
  	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type LustreParser struct {
	*antlr.BaseParser
}

var LustreParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  LiteralNames           []string
  SymbolicNames          []string
  RuleNames              []string
  PredictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func lustreParserInit() {
  staticData := &LustreParserStaticData
  staticData.LiteralNames = []string{
    "", "'type'", "'='", "';'", "'const'", "':'", "'node'", "'('", "')'", 
    "'returns'", "'var'", "'let'", "'tel'", "'function'", "','", "'struct'", 
    "'{'", "'}'", "'enum'", "'int'", "'subrange'", "'['", "']'", "'of'", 
    "'bool'", "'real'", "'-'", "'--%PROPERTY'", "'--%REALIZABLE'", "'--%IVC'", 
    "'--%MAIN'", "'assert'", "'floor'", "'condact'", "'.'", "':='", "'pre'", 
    "'not'", "'*'", "'/'", "'div'", "'mod'", "'+'", "'<'", "'<='", "'>'", 
    "'>='", "'<>'", "'and'", "'or'", "'xor'", "'=>'", "'->'", "'if'", "'then'", 
    "'else'",
  }
  staticData.SymbolicNames = []string{
    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
    "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
    "", "", "", "", "", "REAL", "BOOL", "INT", "ID", "WS", "SL_COMMENT", 
    "ML_COMMENT", "ERROR",
  }
  staticData.RuleNames = []string{
    "program", "typedef", "constant", "node", "function", "varDeclList", 
    "varDeclGroup", "topLevelType", "type", "bound", "property", "realizabilityInputs", 
    "ivc", "main", "assertion", "equation", "lhs", "expr", "eID",
  }
  staticData.PredictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// LustreParserInit initializes any static state used to implement LustreParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewLustreParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func LustreParserInit() {
  staticData := &LustreParserStaticData
  staticData.once.Do(lustreParserInit)
}

// NewLustreParser produces a new parser instance for the optional input antlr.TokenStream.
func NewLustreParser(input antlr.TokenStream) *LustreParser {
	LustreParserInit()
	this := new(LustreParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &LustreParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Lustre.g4"

	return this
}


// LustreParser tokens.
const (
	LustreParserEOF = antlr.TokenEOF
	LustreParserT__0 = 1
	LustreParserT__1 = 2
	LustreParserT__2 = 3
	LustreParserT__3 = 4
	LustreParserT__4 = 5
	LustreParserT__5 = 6
	LustreParserT__6 = 7
	LustreParserT__7 = 8
	LustreParserT__8 = 9
	LustreParserT__9 = 10
	LustreParserT__10 = 11
	LustreParserT__11 = 12
	LustreParserT__12 = 13
	LustreParserT__13 = 14
	LustreParserT__14 = 15
	LustreParserT__15 = 16
	LustreParserT__16 = 17
	LustreParserT__17 = 18
	LustreParserT__18 = 19
	LustreParserT__19 = 20
	LustreParserT__20 = 21
	LustreParserT__21 = 22
	LustreParserT__22 = 23
	LustreParserT__23 = 24
	LustreParserT__24 = 25
	LustreParserT__25 = 26
	LustreParserT__26 = 27
	LustreParserT__27 = 28
	LustreParserT__28 = 29
	LustreParserT__29 = 30
	LustreParserT__30 = 31
	LustreParserT__31 = 32
	LustreParserT__32 = 33
	LustreParserT__33 = 34
	LustreParserT__34 = 35
	LustreParserT__35 = 36
	LustreParserT__36 = 37
	LustreParserT__37 = 38
	LustreParserT__38 = 39
	LustreParserT__39 = 40
	LustreParserT__40 = 41
	LustreParserT__41 = 42
	LustreParserT__42 = 43
	LustreParserT__43 = 44
	LustreParserT__44 = 45
	LustreParserT__45 = 46
	LustreParserT__46 = 47
	LustreParserT__47 = 48
	LustreParserT__48 = 49
	LustreParserT__49 = 50
	LustreParserT__50 = 51
	LustreParserT__51 = 52
	LustreParserT__52 = 53
	LustreParserT__53 = 54
	LustreParserT__54 = 55
	LustreParserREAL = 56
	LustreParserBOOL = 57
	LustreParserINT = 58
	LustreParserID = 59
	LustreParserWS = 60
	LustreParserSL_COMMENT = 61
	LustreParserML_COMMENT = 62
	LustreParserERROR = 63
)

// LustreParser rules.
const (
	LustreParserRULE_program = 0
	LustreParserRULE_typedef = 1
	LustreParserRULE_constant = 2
	LustreParserRULE_node = 3
	LustreParserRULE_function = 4
	LustreParserRULE_varDeclList = 5
	LustreParserRULE_varDeclGroup = 6
	LustreParserRULE_topLevelType = 7
	LustreParserRULE_type = 8
	LustreParserRULE_bound = 9
	LustreParserRULE_property = 10
	LustreParserRULE_realizabilityInputs = 11
	LustreParserRULE_ivc = 12
	LustreParserRULE_main = 13
	LustreParserRULE_assertion = 14
	LustreParserRULE_equation = 15
	LustreParserRULE_lhs = 16
	LustreParserRULE_expr = 17
	LustreParserRULE_eID = 18
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllTypedef() []ITypedefContext
	Typedef(i int) ITypedefContext
	AllConstant() []IConstantContext
	Constant(i int) IConstantContext
	AllNode() []INodeContext
	Node(i int) INodeContext
	AllFunction() []IFunctionContext
	Function(i int) IFunctionContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LustreParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LustreParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LustreParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(LustreParserEOF, 0)
}

func (s *ProgramContext) AllTypedef() []ITypedefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITypedefContext); ok {
			len++
		}
	}

	tst := make([]ITypedefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITypedefContext); ok {
			tst[i] = t.(ITypedefContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Typedef(i int) ITypedefContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypedefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypedefContext)
}

func (s *ProgramContext) AllConstant() []IConstantContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConstantContext); ok {
			len++
		}
	}

	tst := make([]IConstantContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConstantContext); ok {
			tst[i] = t.(IConstantContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Constant(i int) IConstantContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstantContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstantContext)
}

func (s *ProgramContext) AllNode() []INodeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(INodeContext); ok {
			len++
		}
	}

	tst := make([]INodeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(INodeContext); ok {
			tst[i] = t.(INodeContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Node(i int) INodeContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INodeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(INodeContext)
}

func (s *ProgramContext) AllFunction() []IFunctionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFunctionContext); ok {
			len++
		}
	}

	tst := make([]IFunctionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFunctionContext); ok {
			tst[i] = t.(IFunctionContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Function(i int) IFunctionContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LustreListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LustreListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LustreVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *LustreParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, LustreParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(44)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for ((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 8274) != 0) {
		p.SetState(42)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case LustreParserT__0:
			{
				p.SetState(38)
				p.Typedef()
			}


		case LustreParserT__3:
			{
				p.SetState(39)
				p.Constant()
			}


		case LustreParserT__5:
			{
				p.SetState(40)
				p.Node()
			}


		case LustreParserT__12:
			{
				p.SetState(41)
				p.Function()
			}



		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(46)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(47)
		p.Match(LustreParserEOF)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// ITypedefContext is an interface to support dynamic dispatch.
type ITypedefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode
	TopLevelType() ITopLevelTypeContext

	// IsTypedefContext differentiates from other interfaces.
	IsTypedefContext()
}

type TypedefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypedefContext() *TypedefContext {
	var p = new(TypedefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LustreParserRULE_typedef
	return p
}

func InitEmptyTypedefContext(p *TypedefContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LustreParserRULE_typedef
}

func (*TypedefContext) IsTypedefContext() {}

func NewTypedefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypedefContext {
	var p = new(TypedefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LustreParserRULE_typedef

	return p
}

func (s *TypedefContext) GetParser() antlr.Parser { return s.parser }

func (s *TypedefContext) ID() antlr.TerminalNode {
	return s.GetToken(LustreParserID, 0)
}

func (s *TypedefContext) TopLevelType() ITopLevelTypeContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITopLevelTypeContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITopLevelTypeContext)
}

func (s *TypedefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypedefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *TypedefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LustreListener); ok {
		listenerT.EnterTypedef(s)
	}
}

func (s *TypedefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LustreListener); ok {
		listenerT.ExitTypedef(s)
	}
}

func (s *TypedefContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LustreVisitor:
		return t.VisitTypedef(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *LustreParser) Typedef() (localctx ITypedefContext) {
	localctx = NewTypedefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, LustreParserRULE_typedef)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(49)
		p.Match(LustreParserT__0)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(50)
		p.Match(LustreParserID)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(51)
		p.Match(LustreParserT__1)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(52)
		p.TopLevelType()
	}
	{
		p.SetState(53)
		p.Match(LustreParserT__2)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IConstantContext is an interface to support dynamic dispatch.
type IConstantContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode
	Expr() IExprContext
	Type_() ITypeContext

	// IsConstantContext differentiates from other interfaces.
	IsConstantContext()
}

type ConstantContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConstantContext() *ConstantContext {
	var p = new(ConstantContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LustreParserRULE_constant
	return p
}

func InitEmptyConstantContext(p *ConstantContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LustreParserRULE_constant
}

func (*ConstantContext) IsConstantContext() {}

func NewConstantContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConstantContext {
	var p = new(ConstantContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LustreParserRULE_constant

	return p
}

func (s *ConstantContext) GetParser() antlr.Parser { return s.parser }

func (s *ConstantContext) ID() antlr.TerminalNode {
	return s.GetToken(LustreParserID, 0)
}

func (s *ConstantContext) Expr() IExprContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ConstantContext) Type_() ITypeContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *ConstantContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstantContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ConstantContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LustreListener); ok {
		listenerT.EnterConstant(s)
	}
}

func (s *ConstantContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LustreListener); ok {
		listenerT.ExitConstant(s)
	}
}

func (s *ConstantContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LustreVisitor:
		return t.VisitConstant(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *LustreParser) Constant() (localctx IConstantContext) {
	localctx = NewConstantContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, LustreParserRULE_constant)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(55)
		p.Match(LustreParserT__3)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(56)
		p.Match(LustreParserID)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	if _la == LustreParserT__4 {
		{
			p.SetState(57)
			p.Match(LustreParserT__4)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(58)
			p.type_(0)
		}

	}
	{
		p.SetState(61)
		p.Match(LustreParserT__1)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(62)
		p.expr(0)
	}
	{
		p.SetState(63)
		p.Match(LustreParserT__2)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// INodeContext is an interface to support dynamic dispatch.
type INodeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetInput returns the input rule contexts.
	GetInput() IVarDeclListContext

	// GetOutput returns the output rule contexts.
	GetOutput() IVarDeclListContext

	// GetLocal returns the local rule contexts.
	GetLocal() IVarDeclListContext


	// SetInput sets the input rule contexts.
	SetInput(IVarDeclListContext)

	// SetOutput sets the output rule contexts.
	SetOutput(IVarDeclListContext)

	// SetLocal sets the local rule contexts.
	SetLocal(IVarDeclListContext)


	// Getter signatures
	ID() antlr.TerminalNode
	AllEquation() []IEquationContext
	Equation(i int) IEquationContext
	AllProperty() []IPropertyContext
	Property(i int) IPropertyContext
	AllAssertion() []IAssertionContext
	Assertion(i int) IAssertionContext
	AllMain() []IMainContext
	Main(i int) IMainContext
	AllRealizabilityInputs() []IRealizabilityInputsContext
	RealizabilityInputs(i int) IRealizabilityInputsContext
	AllIvc() []IIvcContext
	Ivc(i int) IIvcContext
	AllVarDeclList() []IVarDeclListContext
	VarDeclList(i int) IVarDeclListContext

	// IsNodeContext differentiates from other interfaces.
	IsNodeContext()
}

type NodeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	input IVarDeclListContext 
	output IVarDeclListContext 
	local IVarDeclListContext 
}

func NewEmptyNodeContext() *NodeContext {
	var p = new(NodeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LustreParserRULE_node
	return p
}

func InitEmptyNodeContext(p *NodeContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LustreParserRULE_node
}

func (*NodeContext) IsNodeContext() {}

func NewNodeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NodeContext {
	var p = new(NodeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LustreParserRULE_node

	return p
}

func (s *NodeContext) GetParser() antlr.Parser { return s.parser }

func (s *NodeContext) GetInput() IVarDeclListContext { return s.input }

func (s *NodeContext) GetOutput() IVarDeclListContext { return s.output }

func (s *NodeContext) GetLocal() IVarDeclListContext { return s.local }


func (s *NodeContext) SetInput(v IVarDeclListContext) { s.input = v }

func (s *NodeContext) SetOutput(v IVarDeclListContext) { s.output = v }

func (s *NodeContext) SetLocal(v IVarDeclListContext) { s.local = v }


func (s *NodeContext) ID() antlr.TerminalNode {
	return s.GetToken(LustreParserID, 0)
}

func (s *NodeContext) AllEquation() []IEquationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IEquationContext); ok {
			len++
		}
	}

	tst := make([]IEquationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IEquationContext); ok {
			tst[i] = t.(IEquationContext)
			i++
		}
	}

	return tst
}

func (s *NodeContext) Equation(i int) IEquationContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEquationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEquationContext)
}

func (s *NodeContext) AllProperty() []IPropertyContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPropertyContext); ok {
			len++
		}
	}

	tst := make([]IPropertyContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPropertyContext); ok {
			tst[i] = t.(IPropertyContext)
			i++
		}
	}

	return tst
}

func (s *NodeContext) Property(i int) IPropertyContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPropertyContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPropertyContext)
}

func (s *NodeContext) AllAssertion() []IAssertionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAssertionContext); ok {
			len++
		}
	}

	tst := make([]IAssertionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAssertionContext); ok {
			tst[i] = t.(IAssertionContext)
			i++
		}
	}

	return tst
}

func (s *NodeContext) Assertion(i int) IAssertionContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssertionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssertionContext)
}

func (s *NodeContext) AllMain() []IMainContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IMainContext); ok {
			len++
		}
	}

	tst := make([]IMainContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IMainContext); ok {
			tst[i] = t.(IMainContext)
			i++
		}
	}

	return tst
}

func (s *NodeContext) Main(i int) IMainContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMainContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMainContext)
}

func (s *NodeContext) AllRealizabilityInputs() []IRealizabilityInputsContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRealizabilityInputsContext); ok {
			len++
		}
	}

	tst := make([]IRealizabilityInputsContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRealizabilityInputsContext); ok {
			tst[i] = t.(IRealizabilityInputsContext)
			i++
		}
	}

	return tst
}

func (s *NodeContext) RealizabilityInputs(i int) IRealizabilityInputsContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRealizabilityInputsContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRealizabilityInputsContext)
}

func (s *NodeContext) AllIvc() []IIvcContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IIvcContext); ok {
			len++
		}
	}

	tst := make([]IIvcContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IIvcContext); ok {
			tst[i] = t.(IIvcContext)
			i++
		}
	}
